--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: mauibeach-android-ci-build
-          path: src/MauiBeach/bin/Release/net6.0-android/*Signed.a*
+          path: src/MauiBeach/bin/Release/net6.0-android33.0/*Signed.a*
