--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -39,7 +39,7 @@ jobs:
         run: dotnet restore PITS-MAUI/PITS-MAUI.csproj
 
       - name: Build MAUI Android
-        run: dotnet publish PITS-MAUI/PITS-MAUI.csproj -c Release -f net6.0-android --no-restore
+        run: dotnet publish PITS-MAUI/PITS-MAUI.csproj -c Release -f net6.0-android33.0 --no-restore
 
       - name: Upload Android Artifact
         uses: actions/upload-artifact@v3.1.0
